--- a/APM-Start/src/app/products/product-list.component.html
+++ b/APM-Start/src/app/products/product-list.component.html
@@ -1,29 +1,26 @@
-<div class='card'>
-  <div class='card-header'>
-    {{pageTitle}}
+<div class="card">
+  <div class="card-header">
+    {{ pageTitle }}
   </div>
-  <div class='card-body'>
-    <div class='row'>
-      <div class='col-md-2'>Filter by:</div>
-      <div class='col-md-4'>
-        <input type='text'
-        [(ngModel)]='listFilter'/>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-2">Filter by:</div>
+      <div class="col-md-4">
+        <input type="text" [(ngModel)]="listFilter" />
       </div>
     </div>
-    <div class='row'>
-      <div class='col-md-6'>
-        <h4>Filtered by: {{listFilter}}</h4>
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Filtered by: {{ listFilter }}</h4>
       </div>
     </div>
-    <div class='table-responsive'>
-      <table class='table'
-             *ngIf='products.length'>
+    <div class="table-responsive">
+      <table class="table" *ngIf="products.length">
         <thead>
           <tr>
             <th>
-              <button class='btn btn-primary'
-                      (click)='toggleImage()'>
-                {{showImage ? 'Hide' : 'Show'}} Image
+              <button class="btn btn-primary" (click)="toggleImage()">
+                {{ showImage ? "Hide" : "Show" }} Image
               </button>
             </th>
             <th>Product</th>
@@ -34,24 +31,37 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor='let product of filteredProducts'>
+          <tr *ngFor="let product of filteredProducts">
             <td>
-              <img *ngIf='showImage'
-                   [src]='product.imageUrl'
-                   [title]='product.productName'
-                   [style.width.px]='imageWidth'
-                   [style.margin.px]='imageMargin'>
+              <img
+                *ngIf="showImage"
+                [src]="product.imageUrl"
+                [title]="product.productName"
+                [style.width.px]="imageWidth"
+                [style.margin.px]="imageMargin"
+              />
             </td>
-            <td>{{ product.productName }}</td>
-            <td>{{ product.productCode | lowercase | convertToSpaces : '-'}}</td>
+            <td>
+              <a [routerLink]="['/products', product.productId]">{{
+                product.productName
+              }}</a>
+            </td>
+            <td>
+              {{ product.productCode | lowercase | convertToSpaces: "-" }}
+            </td>
             <td>{{ product.releaseDate }}</td>
-            <td align="right">{{ product.price | currency:'INR':'symbol':'1.0-0'}}</td>
-            <td align="right"><pm-star [rating]="product.starRating" (rate)="changeRating($event)"></pm-star></td>
+            <td align="right">
+              {{ product.price | currency: "INR":"symbol":"1.0-0" }}
+            </td>
+            <td align="right">
+              <pm-star
+                [rating]="product.starRating"
+                (rate)="changeRating($event)"
+              ></pm-star>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
-
   </div>
-
 </div>
